--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My React App</title>
+  <title>GoAL Project</title>
   <!-- Include React static files -->
   <link rel="stylesheet" href="{% static 'build/static/css/main.css' %}" />
   <link
